--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'commons-fileupload:commons-fileupload:1.4'
+	implementation 'com.auth0:java-jwt:3.8.2'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'commons-codec:commons-codec:1.13'
